test: align sidebar tests with current nav feature flags
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/docs/问题文档/深度除虫问题清单-2026-02-28.md
+++ b/docs/问题文档/深度除虫问题清单-2026-02-28.md
@@ -177,5 +177,6 @@ poetry run mypy .
 - [x] **P0-2（部分）** `ProjectDetail` 测试数据补齐 `synopsis` 字段，消除 `ChapterItem` 类型不匹配。
 - [x] **P0-2（部分）** 增加 `frontend/src/vite-env.d.ts`，修复 `ImportMeta.env` 类型声明缺失导致的构建报错。
 - [x] **P0-3（部分）** `vitest.config.ts` 限定仅运行 `src/**/*.{test,spec}.{ts,tsx}`，排除 `e2e/**`，避免 Vitest 混跑 Playwright 用例。
+- [x] **P0-3（部分）** `Sidebar.test.tsx` 已对齐当前侧边栏实际行为（品牌文案 `Morpheus`、图谱开关关闭时的子导航项数量与高亮索引），相关用例恢复通过。
 
 > 说明：本轮按要求绕开知识图谱功能恢复相关实现，仅处理可快速落地且低耦合的问题。
